--- a/css/styles.css
+++ b/css/styles.css
@@ -359,6 +359,70 @@ main {
 .modal-close-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+/* modal window form */
+.modal-window-form {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+.modal-window-title {
+  padding-top: 52px;
+  color: var(--primary-second-brand-color);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 0.032em;
+  letter-spacing: 0.32px;
+}
+.mw-text-form {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  height: 100%;
+}
+.mw-input-form {
+  border-radius: 4px;
+}
+
+.mw-text-form:focus-within {
+  border-color: blue;
+  color: var(--primary-first-brand-color);
+}
+.button-mw {
+  display: flex;
+  justify-content: center;
+  width: auto;
+}
+.excerpt-text {
+  color: var(--primary-sub-text-color);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 0.03em;
+  letter-spacing: 0.48px;
+}
+
+.modal-window-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+
+  color: var(--primary-white-color);
+  background-color: ;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 0.032em;
+  letter-spacing: 0.64px;
+
+  border-radius: 4px;
+  background: var(--primary-first-brand-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
 
 /* 2 секція */
 .section-two {
@@ -571,7 +635,9 @@ main {
   color: var(--primary-body-cloud);
   max-width: 264px;
 }
-
+.social-container {
+  margin-right: 80px;
+}
 .social-media-title {
   margin-bottom: 16px;
   font-size: 16px;
@@ -612,6 +678,64 @@ main {
 .social-link:hover,
 .social-link:focus {
   background-color: var(--primary-success-color);
+}
+
+/* почта-футтер */
+
+.sub-conteiner {
+}
+.sub-title {
+  color: var(--primary-white-color);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 0.032em;
+  margin-bottom: 16px;
+}
+.sub-form {
+  display: flex;
+  flex-direction: row;
+}
+.sub-email {
+  border-radius: 4px;
+  border: 1px solid var(--primary-white-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  min-width: 264px;
+  height: 40px;
+  margin-right: 24px;
+  background-color: transparent;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.sub-email::placeholder {
+  color: var(--primary-white-color);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 0.06em;
+  letter-spacing: 0.48px;
+}
+
+.sub-btn {
+  height: 40px;
+  min-width: 165px;
+  border-radius: 4px;
+  background: var(--primary-first-brand-color);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: var(--primary-white-color);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 0.032em;
+  letter-spacing: 0.64px;
+  gap: 16px;
+}
+.sub-icon {
+  fill: currentColor;
 }
 
 /* портфоліо */
