--- a/css/styles.css
+++ b/css/styles.css
@@ -411,7 +411,8 @@ main {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mw-text-form:focus-within {
+.mw-input-form:hover,
+.mw-input-form:focus {
   border-color: var(--primary-first-brand-color);
   color: var(--primary-first-brand-color);
 }
@@ -424,8 +425,8 @@ main {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-container:hover .modal-icon,
-.icon-container:focus .modal-icon {
+.mw-input-form:hover .modal-icon,
+.mw-input-form:focus .modal-icon {
   fill: var(--primary-first-brand-color);
 }
 
@@ -783,18 +784,17 @@ main {
 .sub-form {
   display: flex;
   flex-direction: row;
+  gap: 24px;
 }
 .sub-label {
-  gap: 24px;
 }
 .sub-email {
   border-radius: 4px;
   border: 1px solid var(--primary-white-color);
-  filter: drop-shadow(0px 4px 4px 0px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   min-width: 264px;
   height: 40px;
   background-color: transparent;
-  margin-right: 24px;
   padding-left: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
