--- a/css/styles.css
+++ b/css/styles.css
@@ -465,6 +465,12 @@ main {
   justify-content: center;
   width: auto;
 }
+
+.check-input:checked .expert-link {
+  background-color: var(--active-link-color);
+  border: none;
+  fill: var(--primary-accent-color);
+}
 .excerpt-text {
   color: var(--primary-sub-text-color);
   font-size: 12px;
@@ -481,10 +487,10 @@ main {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* display: inline-flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  fill: transparent; */
+  fill: transparent;
 }
 
 .consumer-agreement-link {
