--- a/css/styles.css
+++ b/css/styles.css
@@ -426,8 +426,7 @@ main {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mw-input-form:hover .modal-icon,
-.mw-input-form:focus .modal-icon {
+.mw-input-form:focus + .modal-icon {
   fill: var(--primary-first-brand-color);
 }
 
@@ -466,7 +465,7 @@ main {
   width: auto;
 }
 
-.check-input:checked .expert-link {
+.check-input:checked + .expert-link {
   background-color: var(--active-link-color);
   border: none;
   fill: var(--primary-accent-color);
@@ -501,7 +500,7 @@ main {
   display: block;
   justify-content: center;
   align-items: center;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   padding: 16px 32px;
 
@@ -509,7 +508,7 @@ main {
   text-align: center;
   font-size: 16px;
   font-weight: 500;
-  line-height: 0.032em;
+  line-height: 1.5;
   letter-spacing: 0.64px;
 
   border-radius: 4px;
