--- a/css/styles.css
+++ b/css/styles.css
@@ -466,7 +466,7 @@ main {
   width: auto;
 }
 
-.check-input:checked + .excerpt-text > span {
+.check-input:checked + .excerpt-text > .expert-link {
   background-color: var(--active-link-color);
   border: none;
   fill: var(--primary-accent-color);
@@ -482,15 +482,15 @@ main {
 .expert-link {
   width: 16px;
   height: 16px;
-  border: 2px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
+  border: 2px solid rgba(46, 47, 66, 0.4);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
+  fill: transparent;
   align-items: center;
   justify-content: center;
-  fill: transparent;
 }
 
 .consumer-agreement-link {
@@ -501,7 +501,7 @@ main {
   display: block;
   justify-content: center;
   align-items: center;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   padding: 16px 32px;
 
