--- a/css/styles.css
+++ b/css/styles.css
@@ -469,8 +469,12 @@ main {
 .check-input:checked + .excerpt-text > .expert-link {
   background-color: var(--active-link-color);
   border: none;
+}
+
+.check-input:checked + .excerpt-text > .check-on {
   fill: var(--primary-accent-color);
 }
+
 .excerpt-text {
   color: var(--primary-sub-text-color);
   font-size: 12px;
@@ -483,7 +487,7 @@ main {
   width: 16px;
   height: 16px;
   border-radius: 2px;
-  border: 2px solid rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
