--- a/css/styles.css
+++ b/css/styles.css
@@ -288,11 +288,12 @@ main {
   height: 100%;
   opacity: 0;
   visibility: hidden;
-  background-color: rgba(46, 47, 66, 0.4);
+
   pointer-events: none;
+  background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 72px 24px 24px 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-window {
@@ -301,14 +302,9 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0;
-  visibility: hidden;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
 }
 
@@ -364,7 +360,6 @@ main {
 /* modal window form */
 
 .modal-window-title {
-  padding-top: 52px;
   color: var(--primary-second-brand-color);
   text-align: center;
   font-size: 16px;
@@ -375,10 +370,6 @@ main {
 }
 
 .modal-window-form {
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 26px;
 }
 
 .mw-container {
@@ -508,6 +499,8 @@ main {
   min-width: 169px;
   height: 56px;
   padding: 16px 32px;
+  margin-left: auto;
+  margin-right: auto;
 
   color: var(--primary-white-color);
   text-align: center;
@@ -522,6 +515,11 @@ main {
   border: none;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.expert-link:hover,
+.expert-link:focus {
+  border-color: var(--primary-first-brand-color);
 }
 
 /* 2 секція */
@@ -756,7 +754,6 @@ main {
 }
 
 .footer-icon {
-  margin-right: 8px;
   width: 40px;
   height: 40px;
 }
@@ -836,7 +833,6 @@ main {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  gap: 16px;
   cursor: pointer;
 }
 .sub-icon {
